add the ability to create run configurations to run dev IDE instance in "split mode" (to debug RemDev scenarios)